syntax = "proto3";

package group;

option go_package = "group_service/proto";

message CreateGroupRequest {
    string title = 1;
    string token = 2;
}
