syntax = "proto3";

package group;

option go_package = "group_service/proto";

message FindGroupRequest {
    string token = 1;
    string group_id = 2;
}

message FindGroupsTeacherRequest {
    string token = 1;
}

message FindGroupsStudentRequest {
    string token = 1;
}

message GroupResponse {
    string group_id = 1;
    string title = 2;
    repeated uint32 students = 3;
}
